# multiMult

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  multiMult.cpp  multiMult.h  pluginMain.cpp
